# CoreCoder

./: .gitignore  .~sentiment_analysis_results.xlsx  README.md  README_CN.md  anti_aging_posts_analysis.xlsx  no_content_posts_analysis.xlsx  packaging_problems_analysis.xlsx  pyproject.toml  red_camellia_cream_analysis.xlsx  sentiment_analysis_results.xlsx
.corecoder/: cache.db
article/: 01-architecture-overview.md  02-agent-loop.md  03-tool-system.md  04-context-compression.md  05-streaming-executor.md  06-multi-agent.md  07-hidden-features.md  zhihu-existing-article-update.md  zhihu-guide-series.md  zhihu-nanocoder.md
corecoder/: agent.py  cli.py  llm.py  prompt.py
corecoder/db/: __init__.py  cache.py  embeddings.py  workspace.py
corecoder/tools/: __init__.py  assign_taxonomy.py  cache_status.py  classify_column.py  derive_column.py  discover_issue_phrases.py  discover_taxonomy.py  discover_topics.py  embed_column.py  export_table.py  invalidate_cache.py  load_table.py  materialize_subset.py  sample_rows.py  sql_query.py
input/: raw_data.csv
output/: engagement_by_keyword.csv  negative_texture_application_products.xlsx  processed_data.xlsx  sentiment_analysis.xlsx  ugc_posts.csv  ugc_posts.xlsx  ugc_posts_cleaned.csv
tests/: test_aidb.py  test_core.py  test_tools.py
